<resources>
    <string name="app_name">Guilherme Viagens</string>
    <string name="pacotes_app_title">Pacotes</string>
    <string name="actitivy_main_especiais">Especiais</string>
    <string name="actitivy_main_brasil">Brasil</string>
    <string name="header_banner">header_banner</string>
    <string name="contend_desc_header_image_cidade">Header Image Cidade</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="digite_informacoes_cartao">Digite as informações do cartão de crédito que você deseja usar para o pagamento.</string>
    <string name="valor_da_compra">Valor da Compra</string>
    <string name="n_mero_do_cart_o">Número do cartão</string>
    <string name="mm">MM</string>
    <string name="aa">AA</string>
    <string name="cvc">CVC</string>
    <string name="nome_impresso_no_cart_o">Nome impresso no cartão</string>
    <string name="comprar">Comprar</string>
    <string name="parab_ns">Parabéns!</string>
    <string name="img_cidade">Imagem da Cidade</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
</resources>